--- a/index.html
+++ b/index.html
@@ -1239,7 +1239,7 @@ try{
 }
 
 const MULTI_SEARCH_MIN_QUERY_LENGTH=2;
-const MULTI_SEARCH_PROMPT_TEXT=`Type at least ${MULTI_SEARCH_MIN_QUERY_LENGTH} characters to search across all characters.`;
+const MULTI_SEARCH_PROMPT_TEXT=`Start typing to search across all characters.`;
 const SEARCH_INPUT_DEBOUNCE_MS=150;
 
 const adventureSearchCache={
