--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 #activityToggle[aria-pressed="true"]:focus-visible{background:#155ccb;border-color:#0b57d0;color:#fff;outline:none}
 .search{position:relative}
 .search input{padding-left:36px;padding-right:34px;outline:none;width:220px;max-width:100%;transition:border-color var(--dur) var(--ease),background-color var(--dur) var(--ease)}
-.search input::placeholder{color:#94a3b8;opacity:1}
+.search input::placeholder{color:#94a3b8;opacity:1;weight:300}
 .search input:hover{border-color:#cbd5f5}
 .search input:focus-visible{border-color:#475569}
 .search svg{position:absolute;left:10px;top:50%;transform:translateY(-50%);width:18px;height:18px;opacity:.6}
