--- a/index.html
+++ b/index.html
@@ -6846,7 +6846,7 @@ function filterAndRender(){
     const entryLabel=fmtNumber(entryCount);
     const entryPlural=entryCount===1?'entry':'entries';
     const meta=hasResults
-      ?`Showing entries from ${countLabel} ${plural} (${entryLabel} ${entryPlural})`
+      ?`Showing ${entryLabel} ${entryPlural} from ${countLabel} ${plural}`
       :'Searching across all characters';
     override={
       label:'',
