--- a/index.html
+++ b/index.html
@@ -213,18 +213,34 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 /* Card */
 .card{display:block;position:relative;background:#fff;border:1px solid var(--border);border-radius:16px;box-shadow:var(--shadow1);overflow:hidden;transition:transform var(--dur) var(--ease),box-shadow var(--dur) var(--ease),background var(--dur) var(--ease)}
 .card:hover{transform:none;box-shadow:var(--shadow1)}
-.log-list .card{position:relative;margin:0;background:transparent;border:0;border-bottom:1px solid var(--divider);border-radius:0;box-shadow:none;overflow:visible;transition:background var(--dur) var(--ease),border-color var(--dur) var(--ease);flex:0 0 auto}
-.log-list .card:first-child{border-top:1px solid var(--divider)}
-.log-list .card::before,.log-list .card::after{content:none}
+.log-list .card{--row-bg:transparent;--card-highlight-opacity:0;position:relative;margin:0;background:transparent;border:0;border-bottom:1px solid var(--border);border-radius:var(--log-card-radius);box-shadow:none;overflow:visible;transition:border-color var(--dur) var(--ease),box-shadow var(--dur) var(--ease),transform var(--dur) var(--ease),background var(--dur) var(--ease);flex:0 0 auto}
+.log-list .card,
+.log-list .card::before,
+.log-list .card::after{border-radius:0}
+.log-list .card.open,
+.log-list .card.open::before,
+.log-list .card.open::after{border-radius:var(--log-card-radius)}
+.log-list .card.editing,
+.log-list .card.editing::before,
+.log-list .card.editing::after{border-radius:var(--log-card-radius)}
+.log-list .card:first-child{border-top:1px solid var(--border)}
+.log-list .card::before{content:"";position:absolute;top:-1px;right:-1px;bottom:-1px;left:-1px;pointer-events:none;border-radius:inherit;background:transparent;box-shadow:inset 0 0 0 0 rgba(238,241,247,0);opacity:0;transition:box-shadow var(--dur) var(--ease),opacity var(--dur) var(--ease);z-index:1;will-change:box-shadow,opacity}
+.log-list .card::after{content:"";position:absolute;top:-1px;right:-1px;bottom:-1px;left:-1px;background:var(--row-bg);pointer-events:none;transition:background var(--dur) var(--ease),border-color var(--dur) var(--ease);z-index:0;border-radius:inherit;border:3px solid transparent;border-left:0}
 .log-list .card>*{position:relative;z-index:1}
-.log-list .card:hover{background:rgba(15,23,42,.03)}
+.log-list .card:hover{--row-bg:rgba(15,23,42,.03)}
 .log-list .card:hover,.log-list .card.open{z-index:1}
-.log-list .card.open{background:rgba(26,115,232,.08);border-bottom:1px solid rgba(26,115,232,.35)}
-.log-list .card.editing{background:rgba(241,245,249,.9);box-shadow:none;border-bottom:1px solid rgba(26,115,232,.35)}
-.log-list .card .card-hd{padding:16px 24px;display:flex;align-items:flex-start;gap:16px;min-height:0;transition:color var(--dur) var(--ease)}
+.log-list .card.open{--row-bg:rgba(148,163,184,.08);--card-highlight-opacity:1;background:var(--open-card-body);border:1px solid var(--open-card-border);box-shadow:var(--open-card-shadow);transform:none;border-radius:0}
+.log-list .card.open .card-hd{background:var(--open-card-header);border-radius:0;border-bottom:1px solid rgba(148,163,184,.18);box-shadow:none}
+.log-list .card.open::after{border-color:var(--open-card-border);background:var(--open-card-body);border-radius:0}
+.log-list .card.editing::after{border-color:#eef1f7}
+.log-list .card.editing .card-hd{background:var(--row-bg,#f1f5f9)}
+.log-list .card.editing{--row-bg:rgba(241,245,249,.9)}
+.log-list .card.open::before{box-shadow:none;opacity:0;border-radius:0}
+.log-list .card.editing::before{box-shadow:inset 3px 0 0 #eef1f7;opacity:1}
+.log-list .card .card-hd{padding:14px 20px;display:flex;align-items:flex-start;gap:16px;min-height:0;transition:background var(--dur) var(--ease),border-radius var(--dur) var(--ease),color var(--dur) var(--ease),border-color var(--dur) var(--ease),box-shadow var(--dur) var(--ease)}
 .log-list .card .card-hd .card-tools{margin-left:auto;display:flex;align-items:center;gap:8px}
-.log-list .card-bd{border-top:1px solid var(--divider);padding:0 24px;background:transparent;transition:background-color var(--dur) var(--ease),color var(--dur) var(--ease),border-color var(--dur) var(--ease)}
-.log-list .card.open .card-bd{border-color:rgba(26,115,232,.3)}
+.log-list .card-bd{border-top:1px solid rgba(148,163,184,.28);padding:0 20px;background:rgba(248,250,252,.85);transition:background-color var(--dur) var(--ease),background var(--dur) var(--ease),border-color var(--dur) var(--ease),color var(--dur) var(--ease)}
+.log-list .card.open .card-bd{border-radius:0;background:transparent;border-color:rgba(148,163,184,.2)}
 .log-list .card .bd-in{padding:18px 0 20px}
 .log-list .card .edit-form{padding:18px 0 24px}
 .card:focus-visible{outline:2px solid rgba(100,116,139,.45);outline-offset:4px}
@@ -315,9 +331,9 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .pill-link svg{width:14px;height:14px;display:block;pointer-events:none}
 .pill-link:hover{background:#dbeafe;color:#0b57d0;box-shadow:var(--shadow1)}
 .pill-link:focus-visible{outline:2px solid rgba(26,115,232,.45);outline-offset:2px}
-.card-section{background:transparent;border-radius:0;padding:16px 0;display:flex;flex-direction:column;gap:12px;margin-top:0;border-top:1px solid var(--divider)}
-.log-list .card.open .card-section{background:transparent;border-radius:0;border:none}
-.card-section:first-of-type{border-top:none;padding-top:0}
+.card-section{background:rgba(15,23,42,.02);border-radius:14px;padding:16px;display:flex;flex-direction:column;gap:12px;margin-top:12px}
+.log-list .card.open .card-section{background:#fff;border-radius:14px;border:1px solid rgba(148,163,184,.18)}
+.card-section:first-of-type{margin-top:0}
 .card-overview{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:16px;margin-bottom:16px}
 .card-overview .field,.card-overview .kvsingle,.card-overview .kv2{margin:0}
 .card-section-header{display:flex;align-items:center;justify-content:space-between;gap:8px}
